--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h1 {
     color: blue;
 }
 
-section {
+.flexible-container {
     display: flex;
     margin-bottom: 100px;
 }
@@ -23,6 +23,7 @@ section {
 .half-width {
     width: 50%;
     padding-left: 7%;
+
 
 }
 
@@ -49,4 +50,36 @@ section {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+
+.experience-item {
+    box-shadow: 10px 10px 40px grey;
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 10px;
+    border-radius: 10px;
+
+}
+
+.experience-area {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+#developer-exp {
+    border-left: 7px solid;
+    border-image: linear-gradient(blue cyan);
+    border-image-slice: 1;
+
+}
+
+#marketing-exp {
+    border-left: 7px solid;
+    border-image: linear-gradient(salmon tomato);
+    border-image-slice: 1;
+}
+footer{
+    text-align: center;
 }
